--- a/Movies_Final_Analysis.ipynb
+++ b/Movies_Final_Analysis.ipynb
@@ -544,7 +544,7 @@
    ],
    "source": [
     "df_stats.plot(x='category', y='number_of_comments', kind='bar', legend=False, grid=True, figsize=(8, 5))\n",
-    "plt.title(\"Tomatometer Rating Catergry Distribution\")\n",
+    "plt.title(\"Audience Rating Cateegory Distribution\")\n",
     "plt.ylabel('# of Occurrences', fontsize=12)\n",
     "plt.xlabel('Ratings', fontsize=12)\n",
     "plt.xticks(np.arange(4),('0-25', '26-50', '51-75','76-100'))"
